start khan section

--- a/index.html
+++ b/index.html
@@ -62,11 +62,28 @@
       </section>
 
       <section class="video">
-
+        <h1 class="section-title">Charlas TED</h1>
+        <h2 class="section-subtitle">Para los amantes de la procrastinación</h2>
+        <div class="video__iframes">
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe class="video__iframe video__iframe_margin-left" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
       </section>
 
       <section class="oakley">
+        <div class="two-columns two-columns_padding">
+          <div class="two-columns__brief">La historia de Barbara Oakley</div>
+          <div class="two-columns__main-text">
+            <p class="two-columns__paragraph">Durante la infancia de Barbara, las matemáticas no le surgieron de forma innata. Pensaba que era una persona más orientada a las humanidades, y no precisamente brillante. En vistas a convertirse en lingüista, después de terminar el instituto se alistó en el ejército, donde la mandaron a aprender ruso. Tras varios años de servicio, durante los cuales ascendió al rango de capitán, Barbara dejó el ejército y decidió estudiar ingeniería. Fue en este momento cuando desarrolló su metodología de aprendizaje, porque se vio obligada a reprogramar su cerebro para un tipo de aprendizaje distinto. Resulta que cuando algo no te sale de forma natural, el hecho de tener que trabajar duro para obtener conocimientos, que otras personas pueden captar a la primera, te da un conocimiento más profundo y completo del tema en cuestión.</p>
+          </div>
+        </div>
+      </section>
 
+      <section class="feynman">
+        <h1 class="feynman__title">La técnica Feynman</h1>
+        <h2 class="feynman__subtitle">Aprender sin olvidar</h2>
+        <a class="feynman__link">Más →</a>
+        <img class="feynman__image" src="images/feynman.png" alt="Una imagen de Richard Feynman, físico cuántico de fama mundial. La técnica Feynman se deriva de sus métodos de estudio cuando era estudiante en Princeton.">
       </section>
 
       <section class="digits">
@@ -110,12 +127,7 @@
         </ul>
       </section>
 
-      <section class="feynman">
-        <h1 class="feynman__title">La técnica Feynman</h1>
-        <h2 class="feynman__subtitle">Aprender sin olvidar</h2>
-        <a class="feynman__link">Más →</a>
-        <img class="feynman__image" src="images/feynman.png" alt="Una imagen de Richard Feynman, físico cuántico de fama mundial. La técnica Feynman se deriva de sus métodos de estudio cuando era estudiante en Princeton.">
-      </section>
+
 
       <section class="kaufman">
         <h1 class="section-title section-title_theme_dark">Diez principios para adquirir habilidades rápidamente</h1>
