--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
         </div>
       </section>
 
- 
       <section class="techniques">
         <h1 class="section-title">Técnicas de aprendizaje</h1>
         <h2 class="section-subtitle">Cinco estrategias por Barbara Oakley</h2>
@@ -127,8 +126,20 @@
         </ul>
       </section>
 
-
-
+      <section class="khan">
+        <div class="khan__container">
+          <h2 class="khan__author">Salman Khan</h1>
+          <h1 class="khan__title">La escuela del mundo</h2>
+          <p class="khan__quote">La pasión e innovación de Sal Khan están transformando el aprendizaje de millones de estudiantes de todo el mundo. "La escuela del mundo" es una lectura obligatoria para todos aquellos que estén comprometidos a mejorar la educación y quieran que estudiantes de todos los rincones del mundo adquieran las habilidades y conocimientos necesarios para tener éxito académico, profesional y en la vida en general.</p>
+          <p class="khan__quote-author">George Lucas</p>
+          <p class="khan__quote-author-subline">Director de cine</p>
+          <div class="khan__book-container">
+            <img class="khan__book-pic" src="./images/khan-book-2.png" alt="Un libro perfecto para aprender sobre Khan">
+            <p><a class="khan__buy-link">Comprar libro →</a><p>
+          </div>
+        </div>  
+      </section>
+        
       <section class="kaufman">
         <h1 class="section-title section-title_theme_dark">Diez principios para adquirir habilidades rápidamente</h1>
         <h2 class="section-subtitle section-subtitle_theme_dark">por Josh Kaufman</h2>
