--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
             <p class="table__text table__text_theme_dark">Enfatizar la cantidad y la velocidad</p>
           </li>
         </ul>
-        <img class="kaufman__triangle" src="images/kaufman-triangle.svg" alt="Un gran triángulo azul, sobre el que Josh Kaufman reclama la propiedad">
+        <img class="kaufman__triangle rotation" src="images/kaufman-triangle.svg" alt="Un gran triángulo azul, sobre el que Josh Kaufman reclama la propiedad">
       </section>
     </main>
     <footer class="footer">
