--- a/index.html
+++ b/index.html
@@ -188,6 +188,21 @@
         <img class="kaufman__triangle rotation" src="images/kaufman-triangle.svg" alt="Un gran triángulo azul, sobre el que Josh Kaufman reclama la propiedad">
       </section>
     </main>
+
+    <section class="resources">
+      <h1 class="section-title">Recursos útiles</h1>
+      <h2 class="section-subtitle">Más materiales sobre técnicas y trucos de aprendizaje.</h2>
+      <div class="resources__logo-zone">
+        <img class="resources__logo" alt="TED Ed" src="images/logo/resources-tedED.png">
+        <img class="resources__logo" alt="Medium" src="images/logo/resources-Medium.png">
+        <img class="resources__logo" alt="de zeen" src="images/logo/resources-dezeen.png">
+        <img class="resources__logo" alt="goodreads" src="images/logo/resources-goodreads.png">
+      </div>
+
+
+    </section>
+
+
     <footer class="footer">
       <div class="footer__columns">
         <div class="footer__column_content_copyright">
