--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="pages/index.css">
   <title>Aprender a aprender</title>
 </head>
@@ -12,7 +11,7 @@
     <header class="header">
       <img class="logo logo_place_header" src="images/logo_place_header.png" alt="practicum">
       <h1 class="header__title">Aprender a aprender</h1>
-      <h2 class="header__subtitle">Las técnicas de aprendizaje más eficaces y avanzadas que puedes aplicar en tu vida diaria <a class="header__link">Más información →</a></h2>
+      <h2 class="header__subtitle">Las técnicas de aprendizaje más eficaces y avanzadas que puedes aplicar en tu vida diaria <a class="header__link" href="https://code.s3.yandex.net/new-markets/Project_2._lista_de_control_es.pdf">Más información →</a></h2>
       <img class="header__main-illustration" src="images/header-image.png" alt="mujer en la cima de la montaña">
       <div class="header__square-pic rotation"></div>
     </header>
@@ -81,7 +80,7 @@
       <section class="feynman">
         <h1 class="feynman__title">La técnica Feynman</h1>
         <h2 class="feynman__subtitle">Aprender sin olvidar</h2>
-        <a class="feynman__link">Más →</a>
+        <a class="feynman__link" href="https://code.s3.yandex.net/new-markets/Project_2._lista_de_control_es.pdf">Más →</a>
         <img class="feynman__image" src="images/feynman.png" alt="Una imagen de Richard Feynman, físico cuántico de fama mundial. La técnica Feynman se deriva de sus métodos de estudio cuando era estudiante en Princeton.">
       </section>
 
@@ -135,7 +134,7 @@
           <p class="khan__quote-author-subline">Director de cine</p>
           <div class="khan__book-container">
             <img class="khan__book-pic" src="./images/khan-book-2.png" alt="Un libro perfecto para aprender sobre Khan">
-            <p><a class="khan__buy-link">Comprar libro →</a><p>
+            <p><a class="khan__buy-link" href="https://code.s3.yandex.net/new-markets/Project_2._lista_de_control_es.pdf">Comprar libro →</a><p>
           </div>
         </div>  
       </section>
