--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
         <h1 class="section-title">Charlas TED</h1>
         <h2 class="section-subtitle">Para los amantes de la procrastinación</h2>
         <div class="video__iframes">
-          <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          <iframe class="video__iframe video__iframe_margin-left" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe class="video__iframe video__iframe_margin-left" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
       </section>
 
@@ -127,8 +127,8 @@
 
       <section class="khan">
         <div class="khan__container">
-          <h2 class="khan__author">Salman Khan</h1>
-          <h1 class="khan__title">La escuela del mundo</h2>
+          <h2 class="khan__author">Salman Khan</h2>
+          <h1 class="khan__title">La escuela del mundo</h1>
           <p class="khan__quote">La pasión e innovación de Sal Khan están transformando el aprendizaje de millones de estudiantes de todo el mundo. "La escuela del mundo" es una lectura obligatoria para todos aquellos que estén comprometidos a mejorar la educación y quieran que estudiantes de todos los rincones del mundo adquieran las habilidades y conocimientos necesarios para tener éxito académico, profesional y en la vida en general.</p>
           <p class="khan__quote-author">George Lucas</p>
           <p class="khan__quote-author-subline">Director de cine</p>
