added closing p tag

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
           <p class="khan__quote-author-subline">Director de cine</p>
           <div class="khan__book-container">
             <img class="khan__book-pic" src="./images/khan-book-2.png" alt="Un libro perfecto para aprender sobre Khan">
-            <p><a class="khan__buy-link" href="https://code.s3.yandex.net/new-markets/Project_2._lista_de_control_es.pdf">Comprar libro →</a><p>
+            <p><a class="khan__buy-link" href="https://code.s3.yandex.net/new-markets/Project_2._lista_de_control_es.pdf">Comprar libro →</a></p>
           </div>
         </div>  
       </section>
