--- a/index.html
+++ b/index.html
@@ -201,23 +201,23 @@
 
     <footer class="footer">
       <div class="footer__columns">
-        <div class="footer__column_content_copyright">
-          <img class="logo_place_footer" src="images/logo_place_footer.png" alt="Practicum by Yandex">
+        <div class="footer__column-content-copyright">
+          <img class="logo-place-footer" src="images/logo_place_footer.png" alt="Practicum by Yandex">
           <p class="footer__author">&copy; Andrés Canul 2022</p>
         </div>
-        <div class="footer__column_content_about">
+        <div class="footer__column-content-about">
           <p class="footer__column-heading">Acerca de Practicum</p>
           <ul class="footer__list">
-            <li><a class="footer__column_link">Página principal</a></li>
-            <li><a class="footer__column_link">Misión</a></li>
-            <li><a class="footer__column_link">Profesiones</a></li>
+            <li><a class="footer__column-link">Página principal</a></li>
+            <li><a class="footer__column-link">Misión</a></li>
+            <li><a class="footer__column-link">Profesiones</a></li>
           </ul>
         </div>
-        <div class="footer__column_content_social">
+        <div class="footer__column-content-social">
           <p class="footer__column-heading">Redes sociales</p>
           <ul class="footer__list">
-            <li><a class="footer__column_link"><img src="images/facebook_white.svg" class="footer__social_icons" alt="Ícono de Facebook">Facebook</a></li>
-            <li><a class="footer__column_link"><img src="images/instagram_white.svg" class="footer__social_icons" alt="Ícono de Instagram">Instagram</a></li>
+            <li><a class="footer__column-link"><img src="images/facebook_white.svg" class="footer__social-icons" alt="Ícono de Facebook">Facebook</a></li>
+            <li><a class="footer__column-link"><img src="images/instagram_white.svg" class="footer__social-icons" alt="Ícono de Instagram">Instagram</a></li>
           </ul>
         </div>
 
